--- a/app/assets/templates/posts/show.jst.ejs
+++ b/app/assets/templates/posts/show.jst.ejs
@@ -4,4 +4,6 @@
   <%= post.get('body') %>
 </p>
 
-<!-- <a href="#" class="back">Back</a> -->
+<a href="#" class="back">Back</a>
+<br>
+<a href="#/posts/<%= post.get('id') %>/edit">Edit</a>
